<resources>
    <string name="app_name">phyphox</string>
    <string name="privacyPolicyURL">https://phyphox.org/privacy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_experiment">phyphox</string>
    <string name="experimentsPhyphoxOrg">Experiment ideas and instructions</string>
    <string name="experimentsPhyphoxOrgURL">http://phyphox.org/experiments</string>
    <string name="faqPhyphoxOrg">Frequently asked questions</string>
    <string name="faqPhyphoxOrgURL">http://phyphox.org/faq</string>
    <string name="error">Error</string>
    <string name="invalidValue">Invalid Value</string>
    <string name="generalErrorDialog">An error has occurred.</string>
    <string name="help">Help and info</string>
    <string name="translationToWebsiteURL">http://phyphox.org/languages#en</string>
    <string name="deviceInfo">Device info</string>
    <string name="copyToClipboard">Copy to clipboard</string>
    <string name="deviceInfoCopied">The device info has been copied to your clipboard.</string>
    <string name="warning">Warning</string>
    <string name="donotshowagain">Do not show again</string>
    <string name="damageWarning">Please be careful not to damage your phone while experimenting. Please take special care to avoid dropping it on hard surfaces and do not expose it to excessive magnetic fields. The authors of phyphox are not responsible for any damage to your phone.</string>
    <string name="info">Info</string>
    <string name="ok">OK</string>
    <string name="tryagain">Try again</string>
    <string name="doContinue">Continue</string>
    <string name="close">Close</string>
    <string name="next">Next</string>
    <string name="cancel">Cancel</string>
    <string name="unknown">unknown</string>
    <string name="rename">Rename</string>
    <string name="delete">Delete</string>
    <string name="confirmDelete">Do you want to delete this experiment from your collection?</string>
    <string name="confirmDeleteTitle">Confirm delete?</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="clear_data">Clear data</string>
    <string name="clear_data_question">Clear recorded data?</string>
    <string name="clear_data_question_select">Clear recorded data and the following optional items?</string>
    <string name="clear">Clear</string>
    <string name="leave_experiment">Leave experiment</string>
    <string name="leave_experiment_question">Leave this experiment and discard recorded data?</string>
    <string name="leave">Leave</string>
    <string name="timed_stop">Stop timed run</string>
    <string name="timed_start">Start timed run</string>
    <string name="loadingTitle">Loading</string>
    <string name="loadingText">Loading experiment…</string>
    <string name="loadingBluetoothConnectionText">Connecting to Bluetooth device…</string>
    <string name="timedRunDialogTitle">Timed Run</string>
    <string name="timedRunStartDelay">Start delay (s)</string>
    <string name="timedRunStopDelay">Experiment duration (s)</string>
    <string name="enableTimedRun">Do a timed run</string>
    <string name="export">Export Data</string>
    <string name="export_empty">This experiment configuration does not define any data to be exported. If this is an error, please contact the source of the QR code or configuration file.</string>
    <string name="export_subject">Data from phyphox</string>
    <string name="export_pick_share">Pick an export method</string>
    <string name="share">Share screenshot</string>
    <string name="download">Download</string>
    <string name="savedToDownloadsMessage">File saved to Downloads</string>
    <string name="savedToDownloadsError">Could not save the file to Downloads:</string>
    <string name="permissionRequiredToSaveToDownloads">Storage permission is needed to save files to Downloads</string>
    <string name="errorWritingStateFile">Error writing state file: </string>
    <string name="share_subject">Screenshot from phyphox</string>
    <string name="share_pick_share">Pick a share method</string>
    <string name="switchToPhoneLayout">View: Narrow</string>
    <string name="switchColumns1">View: 1 column</string>
    <string name="switchColumns2">View: 2 columns</string>
    <string name="switchColumns3">View: 3 columns</string>
    <string name="toggleBrightMode">Bright mode</string>
    <string name="fontSize">Font size</string>
    <string name="show_description">Experiment info</string>
    <string name="save_locally">Add experiment to collection</string>
    <string name="save_locally_done">Experiment successfully added to collection.</string>
    <string name="save_locally_message">This experiment has been opened from a remote source. Do you want to add it to your experiment collection?</string>
    <string name="save_locally_button">Save to collection</string>
    <string name="save_state">Save experiment state</string>
    <string name="save_state_category">Saved experiment states</string>
    <string name="save_state_message">You can save the state of this experiment including your data to your collection or share it with a third-party app.</string>
    <string name="save_state_title">Title</string>
    <string name="save_state_save">To collection</string>
    <string name="save_state_share">Share</string>
    <string name="save_state_subject">Experiment state for phyphox</string>
    <string name="save_state_default_title">Measurement</string>
    <string name="save_state_success">State has been saved to your collection.</string>
    <string name="open_zip_title">Opening a set of experiments</string>
    <string name="open_zip_dialog_instructions">This resource contains multiple experiments. You can either pick one to open it and optionally save it to your collection or use the button below to save them all to your collection at once.</string>
    <string name="open_save_all">Save all</string>
    <string name="open_bluetooth_assets_title">Experiments for Bluetooth device</string>
    <string name="timedRun">Timed run</string>
    <string name="graph_tools_reset">Reset zoom</string>
    <string name="graph_tools_follow">Follow new data</string>
    <string name="graph_tools_linear_fit">Linear fit</string>
    <string name="graph_tools_export">Export this dataset</string>
    <string name="graph_tools_log_x">Logarithmic x axis</string>
    <string name="graph_tools_log_y">Logarithmic y axis</string>
    <string name="which_spectrum_orientation">What is your device\'s orientation in regard to the spectrum?</string>
    <string name="portrait_orientation">Portrait</string>
    <string name="landscape_orientation">Landscape</string>
    <string name="spectrum_analysis_setting">Spectrum Analysis Settings</string>
    <string name="newExperimentPhyphoxInfo">Visit phyphox.org to create more advanced experiments including data analysis and share them with colleagues, students and friends.</string>
    <string name="newExperimentInputTitle">Title</string>
    <string name="newExperimentInputRate">Sensor rate (in Hz, 0 = as fast as possible)</string>
    <string name="newExperimentInputSensors">Active sensors</string>
    <string name="credits">Credits</string>
    <string name="creditsRWTH">phyphox® has been created at the 2nd Institute of Physics at the RWTH Aachen University.</string>
    <string name="creditsNames">Development and Concept:
\nDr. Sebastian Staacks
\nConcept:
\nProf. Christoph Stampfer
\nProgramming:
\nGaurav Tripathee
\nDominik Dorsel
\nJonas Gessner
\nCamilla Lummerzheim</string>
    <string name="gpl">
        Phyphox® is open source software released under the GNU General Public Licence. Please visit http://phyphox.org for further information and to get access to its source code. However, the name \"phyphox\" and \"RWTH Aachen\" are registered trademarks.
    </string>
    <string name="creditsLibs">The web-interface for remote access uses the Java Lightweight HTTP Server (jlhttp) under the GNU General Public Licence v2 and plots data with the JavaScript library \"Chart.js\" (http://chartjs.org), available under the MIT licence. For the fourier transform, we use the FFTW library (http://fftw.org), Copyright © 2003, 2007-11 Matteo Frigo, Copyright © 2003, 2007-11 Massachusetts Institute of Technology, which is available under the GNU General Public Licence (version 2 or later). GPS elevation data is converted from the WGS84 ellipsoid to the EGM84 geoid using EGM84 data (30\' resolution) and a ported function from the GographicLib (https://geographiclib.sourceforge.io/, MIT/X11 licence).</string>
    <string name="creditsApache" translatable="false">
        <![CDATA[
        <b>Apache POI</b><br />
Copyright 2003-2015 The Apache Software Foundation<br />
<br />
This product includes software developed by The Apache Software Foundation (http://www.apache.org/).<br />
<br />
This product contains parts that were originally based on software from BEA. Copyright (c) 2000-2003, BEA Systems, <http://www.bea.com/>.<br />
<br />
This product contains W3C XML Schema documents. Copyright 2001-2003 (c) World Wide Web Consortium (Massachusetts Institute of Technology, European Research Consortium for Informatics and Mathematics, Keio University)<br />
<br />
This product contains the Piccolo XML Parser for Java (http://piccolo.sourceforge.net/). Copyright 2002 Yuval Oren.<br />
<br />
This product contains the chunks_parse_cmds.tbl file from the vsdump program. Copyright (C) 2006-2007 Valek Filippov (frob@df.ru)<br />
<br />
This product contains parts of the eID Applet project (http://eid-applet.googlecode.com). Copyright (c) 2009-2014 FedICT (federal ICT department of Belgium), e-Contract.be BVBA (https://www.e-contract.be), Bart Hanssens from FedICT<br />
<br />
        ]]>
    </string>
    <string name="creditsZxing" translatable="false">
        <![CDATA[
        <b>Zxing</b><br />
        The QR code scanner function uses ZXing (https://github.com/zxing/zxing), licenced under the Apache licence v2.0 (please see the webpage for details on the licence and contributors). <br />
        <br />
NOTICES FOR BARCODE4J<br />
<br />
Barcode4J<br />
Copyright 2002-2010 Jeremias Märki<br />
Copyright 2005-2006 Dietmar Bürkle<br />
<br />
Portions of this software were contributed under section 5 of the<br />
Apache License. Contributors are listed under:<br />
http://barcode4j.sourceforge.net/contributors.html<br />
<br />
NOTICES FOR JCOMMANDER<br />
<br />
Copyright 2010 Cedric Beust cedric@beust.com
]]>
    </string>
    <string name="sensorLinearAcceleration">Linear Acceleration</string>
    <string name="sensorLight">Light</string>
    <string name="sensorGyroscope">Gyroscope</string>
    <string name="sensorAccelerometer">Accelerometer</string>
    <string name="sensorMagneticField">Magnetic Field</string>
    <string name="sensorPressure">Pressure</string>
    <string name="sensorTemperature">Temperature</string>
    <string name="sensorHumidity">Humidity</string>
    <string name="sensorProximity">Proximity</string>
    <string name="location">Location</string>
    <string name="remotePhyphoxOrg">Remote control help</string>
    <string name="remoteServer">Allow remote access</string>
    <string name="settingsHeadLanguage">Language</string>
    <string name="settingsLanguage">App language</string>
    <string name="settingsTranslation">Translation</string>
    <string name="settingsTranslationMore">Learn more about available languages and how you can help.</string>
    <string name="settingsHeadAdvanced">Advanced</string>
    <string name="settingsProximityLock">Proximity lock</string>
    <string name="settingsProximityLockDetail">Disable the screen when the proximity sensor is triggered to avoid unintended inputs for example in a pocket.</string>
</resources>