<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/graph_tools_reset"
        android:orderInCategory="1"
        android:title="@string/graph_tools_reset" />
    <item
        android:id="@+id/graph_tools_follow"
        android:checkable="true"
        android:orderInCategory="2"
        android:title="@string/graph_tools_follow" />
    <item
        android:id="@+id/graph_tools_linear_fit"
        android:checkable="true"
        android:orderInCategory="3"
        android:title="@string/graph_tools_linear_fit" />
    <item
        android:id="@+id/graph_tools_export"
        android:orderInCategory="4"
        android:title="@string/graph_tools_export" />
    <item
        android:id="@+id/graph_tools_log_x"
        android:checkable="true"
        android:orderInCategory="5"
        android:title="@string/graph_tools_log_x" />
    <item
        android:id="@+id/graph_tools_log_y"
        android:checkable="true"
        android:orderInCategory="6"
        android:title="@string/graph_tools_log_y" />
</menu>
