<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_credits"
        android:orderInCategory="1"
        android:title="@string/credits" />
    <item
        android:id="@+id/action_helpExperiments"
        android:orderInCategory="2"
        android:title="@string/experimentsPhyphoxOrg" />
    <item
        android:id="@+id/action_helpFAQ"
        android:orderInCategory="3"
        android:title="@string/faqPhyphoxOrg" />
    <item
        android:id="@+id/action_helpRemote"
        android:orderInCategory="4"
        android:title="@string/remotePhyphoxOrg" />
    <item
        android:id="@+id/action_translationInfo"
        android:orderInCategory="5"
        android:title="@string/translationInfo" />
    <item
        android:id="@+id/action_deviceInfo"
        android:orderInCategory="6"
        android:title="@string/deviceInfo" />
</menu>
