<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout android:id="@+id/llActionButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="18dp"
        android:padding="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/line1"
        app:layout_constraintTop_toTopOf="parent"
        >


        <com.google.android.material.button.MaterialButton
            android:id="@+id/imageShare"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:iconGravity="start"
            app:iconPadding="4dp"
            android:text="@string/save_state_share"
            android:gravity="center"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
             />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/imageDownload"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:iconGravity="start"
            app:iconPadding="4dp"
            android:text="@string/download"
            android:gravity="center"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/imageSave"
            style="@style/Widget.Material3.Button.IconButton.Filled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:iconGravity="start"
            app:iconPadding="4dp"
            android:text="@string/save_state_save"
            android:gravity="center"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            android:paddingLeft="16dp"
            android:paddingStart="16dp"
            android:paddingRight="16dp"
            android:paddingEnd="16dp"
            />


    </LinearLayout>

    <com.google.android.material.divider.MaterialDivider android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:dividerColor="@color/phyphox_primary"
        app:dividerThickness="2dp"
        app:layout_constraintTop_toBottomOf="@id/llActionButtons"
        app:dividerInsetStart="10dp"
        app:dividerInsetEnd="10dp"
        />

    <TextView android:id="@+id/bottomSheetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_state"
        android:textSize="@dimen/text_size_bigger"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/line1"
        app:layout_constraintLeft_toLeftOf="parent"

        />


    <TextView android:id="@+id/bottomSheetSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_state_message"
        android:textSize="@dimen/text_size_medium"
        android:layout_margin="10dp"
        android:padding="8dp"
        android:textStyle="italic"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bottomSheetTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <EditText
        android:id="@+id/editTextMeasurementName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/bottomSheetSubTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="28dp"
        android:hint="@string/save_state_default_title"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:visibility="gone"
        android:layout_gravity="center"/>




</androidx.constraintlayout.widget.ConstraintLayout>
